navigation bar aligned correctly

--- a/css/layout/navigation.css
+++ b/css/layout/navigation.css
@@ -27,6 +27,8 @@
     text-decoration: none;
     color: var(--clr-white);
     font-size: var(--fs-md);
+    margin-top: 1.5rem;
+    margin-bottom: -2.5rem;
 }
 
 .hero-title {
@@ -44,6 +46,8 @@
 .logo {
     width: 80px; 
     height: 80px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .navigation {
@@ -52,11 +56,12 @@
     justify-content: space-evenly;
 
     list-style: none;
-    margin: 0;
+    margin: 0 auto 0 auto;
     background: hsla(191, 0%, 38%, 1);
 
 
     /*border: 1px solid red;*/
+    
 }
 
 .navigation a {
@@ -79,6 +84,7 @@
 .icon {
     width: 24px; 
     height: 24px;
+    margin-top: 1.8rem;
 }
 
 @media(max-width:767.98px) {
